--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -22,7 +22,7 @@
     .market-box{margin-top: -43px;}
 .container-fluid {width: 100%;padding-right: 15px;padding-left: 15px;margin-right: auto;margin-left: auto}
 .footer .footer-links-1 ul li{ list-style-type:none; font-size:15px; color:#555555; display:inline-block; text-align:left; margin-bottom:15px; width:100%; float:none;}
-.forgot .checkout-form-centre .checkout-login-step {padding: 26px 22px;}
+.forgot .checkout-form-centre .checkout-login-step {padding: 15px 15px;}
 .forgot .nav-pills .nav-link, .forgot .nav-tabs .nav-link {margin-bottom: 20px;}
 .section-complete ul li {width: 57px;margin-right:9px;}
 .forgot .checkout-form-centre .checkout-login-step {border-radius: 28px;}
@@ -39,9 +39,9 @@
 .security .right-searchbar .jrYYEB {width: 278px;}
  .bank-title h3{font-size: 20px;}
  .security .right-searchbar{margin-top: 10px;}
- .wallet-overview .account-balance1 {margin-top: 20px;}
+ /* .wallet-overview .account-balance1 {margin-top: 20px;} */
  .wallet-overview .account-balance1 .estimated-value {text-align: left;}
- .wallet-overview .account-balance .balance-ac {font-size: 23px;}
+ .wallet-overview .account-balance .balance-ac {font-size: 20px;margin-bottom: 7px;}
  .wallet-overview .account-balance1 .estimated-value {font-size: 17px;margin-bottom: 10px;}
  .verification-blue-box .flt {padding: 10px;}
  .level-box .submit-btn .submit{width: 100%;}
@@ -107,7 +107,7 @@
     .withdraw-discount .withdraw-discount-white-box .total-right{font-size: 16px;}
     .withdraw-discount .withdraw-discount-white-box .disc-total{font-size: 16px;}
     .security .right-searchbar{width: 100%;display: block;}
-  
+    .wallet-overview{padding: 15px;}
 }
 
 /*============ Media 320Px Start ============ */
