--- a/src/component/BankModel.css
+++ b/src/component/BankModel.css
@@ -63,7 +63,8 @@
 }
 .modal-content .form-group label {
   font-size: 15px;
-  font-weight: 500;
+  margin-bottom: 7px;
+  font-weight: 400;
   color: var(--text);
 }
 .modal-content .submit-btn .submit {
@@ -73,14 +74,14 @@
     0px 16px 24px rgba(50, 50, 71, 0.08);
   border-radius: 100px;
   padding: 10px 30px;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 500;
   text-align: center;
   text-transform: uppercase;
   color: #ffffff;
   outline: none;
   border: 1px solid #2c6fe1;
-  width: 350px;
+  width: 100%;
 }
 .modal-content .submit-btn {
   width: 100%;
@@ -90,7 +91,7 @@
 .modal-content .submit-btn .submit:hover {
   background: transparent;
   border: 1px solid #2c6fe1;
-  color: #2c6fe1;
+  color: #ffffff;
   transition: all 0.7s ease;
 }
 
