--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -11,6 +11,7 @@
 /* width: 991px; */
 
 @media screen and (max-width: 61.938em) {
+ .navbar-default{padding-top: 8px!important;padding-bottom: 8px!important;}
     .coin-info{display: none;}
     .latest-news{display: none;}
     .table-bx{min-height: auto;}
