--- a/src/component/Header.css
+++ b/src/component/Header.css
@@ -67,9 +67,10 @@
 .megamenu ul li a:hover{text-decoration: none;color:  #ffffff;}
 
 .megamenu ul li:last-child{border-bottom:none;}
-.navbar-toggler {position: relative;}
+
+.navbar-toggler {position: relative;outline: none;border: none;}
 .navbar-toggler:focus,
-.navbar-toggler:active {outline: 0;}
+.navbar-toggler:active {outline:none;border: none;box-shadow: none;}
 .navbar-toggler span {display: block; background-color: #ffffff; height: 3px; width: 25px; margin-top: 4px; margin-bottom: 4px; -webkit-transform: rotate(0deg); transform: rotate(0deg); left: 0; opacity: 1;}
 .navbar-toggler span:nth-child(1),
 .navbar-toggler span:nth-child(3) { transition: -webkit-transform .35s ease-in-out; transition: transform .35s ease-in-out; transition: transform .35s ease-in-out, -webkit-transform .35s ease-in-out;}
@@ -79,8 +80,10 @@
 
 
 @media screen and (max-width: 61.938em){
+  .register ul li{margin-right: 10px!important;}
+  .register ul li:last-child{margin-right: 0px!important;}
 .navbar-default.navbar-trans .nav-item {margin-left: 13px;}
-.top-section .register{position: absolute!important;right: 20px;z-index: 1;top: 8px;} 
+.top-section .register{position: absolute!important;right: 20px;z-index: 999999;top: 63px;} 
 .new-login .login-left-section .login-logo{margin-bottom: 15px;}
 .new-login .frm-section a{margin-bottom: 15px;}
 .register ul li a.crl {background: #181A20!important;}
@@ -136,8 +139,8 @@ background: #454545;height: 50px;font-size: 15px;color: #ffffff;border-top-left-
 
 @media only screen and (max-width: 767.98px) {
 	/* saturday */
-.mobile-res{float: right;display: block!important;}
-.desk{display: none!important;}
+/* .mobile-res{float: right;display: block!important;}
+.desk{display: none!important;} */
 
 }
 
@@ -164,7 +167,7 @@ background: #454545;height: 50px;font-size: 15px;color: #ffffff;border-top-left-
 .top-section .register{float: right;position: relative;white-space: nowrap;}
 .top-section .register .top-cart{ position:relative;}
 .top-section .register .top-cart .circle{box-shadow: 0px 34.7482px 44.16px rgba(1, 1, 1, 0.07), 0px 16.56px 11.04px rgba(1, 1, 1, 0.06), 0px 5.52px 5.52px rgba(1, 1, 1, 0.05), 0px 5.52px 4.416px rgba(1, 1, 1, 0.04), 0px 2.208px 2.76px rgba(1, 1, 1, 0.03), 0px 0.992806px 1.104px rgba(1, 1, 1, 0.02);padding: 5px;border-radius: 50px;width: 40px;height:40px;background: #2C6FE1;}
-.top-section .register .top-cart .circle img{width: 100%;}
+.top-section .register .top-cart .circle img{width: 100%;border-radius: 50px;}
 
 .top-section .register .top-cart a{ color:#000000; }
 .top-section .register .top-cart i{font-size: 20px;font-weight: 600;color: #ffffff;}
@@ -186,7 +189,7 @@ white-space: nowrap; vertical-align: middle; border: 2px solid #86C442; border-r
     color: #ffffff;
     display: block;
     font-size: 20px;
-    border-radius:10px;
+    border-radius:5px;
     height: 40px;
     line-height: 40px;
     text-align: center;
@@ -202,28 +205,28 @@ background: #454545;height: 50px;font-size: 15px;color: #ffffff;border-top-left-
  .register .top-cart .search .input-group-text {background: #86C442;color: #ffffff;outline: none;border-radius: 30px;margin-left: -25px;border:none;font-size: 16px;font-weight: normal;padding: 10px 30px;z-index: 1;}
  .register .top-cart .search .input-group-text i{font-size: 15px;font-weight: 500;color: #ffffff;margin-right: 10px;}
 
- .top-cart .account-dropdown{position: absolute;width:270px;background: #fff;right: 0px;top: 120%;margin-top:19px;text-align: left;padding: 15px 15px 15px 15px;border-radius: 6px;box-shadow: 0px 34.7482px 44.16px rgba(1, 1, 1, 0.07), 0px 16.56px 11.04px rgba(1, 1, 1, 0.06), 0px 5.52px 5.52px rgba(1, 1, 1, 0.05), 0px 5.52px 4.416px rgba(1, 1, 1, 0.04), 0px 2.208px 2.76px rgba(1, 1, 1, 0.03), 0px 0.992806px 1.104px rgba(1, 1, 1, 0.02);opacity: 0;-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";visibility: hidden;-webkit-transition: all 0.5s ease-in-out;transition: all 0.5s ease-in-out;z-index: 99999;}
- .top-cart:hover .account-dropdown{top: 86%;opacity: 1;-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";visibility: visible;}
+ .top-cart .account-dropdown{position: absolute;width:200px;background: var(--bg);right: 0px;margin-top:13px;text-align: left;padding: 15px 15px 15px 15px;border-radius: 6px;box-shadow: 0px 34.7482px 44.16px rgba(1, 1, 1, 0.07), 0px 16.56px 11.04px rgba(1, 1, 1, 0.06), 0px 5.52px 5.52px rgba(1, 1, 1, 0.05), 0px 5.52px 4.416px rgba(1, 1, 1, 0.04), 0px 2.208px 2.76px rgba(1, 1, 1, 0.03), 0px 0.992806px 1.104px rgba(1, 1, 1, 0.02);opacity: 0;-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";visibility: hidden;-webkit-transition: all 0.5s ease-in-out;transition: all 0.5s ease-in-out;z-index: 999;}
+ .top-cart:hover .account-dropdown{top: 86%;opacity: 1;-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";visibility: visible;z-index: 999;}
  .top-cart:hover .account-dropdown .sr-btn-wrap{text-align: left;margin-top:9px;}
   .top-cart .account-dropdown .sr-btn-wrap .sr-btn {text-align:center;padding:13px 20px;color: var(--white);font-weight: 500;font-size: 18px;display: inline-block;text-align: center; position: relative; overflow: hidden;z-index: 1;text-transform: capitalize;transition: box-shadow 0.5s;border-top-right-radius: 30px;border-bottom-left-radius: 30px;border-bottom-right-radius: 30px;min-width: 300px;background: radial-gradient(52.61% 83.94% at 22.22% 29.42%, #3C3939 1.04%, #000000 100%);}
  .top-cart .account-dropdown .sr-btn-wrap .sr-btn:hover{background: radial-gradient(77.25% 77.25% at 24.17% 22.75%, rgba(246, 246, 246, 0.75) 0%, rgba(185, 185, 185, 0.75) 100%);color: #000;}
- .top-cart .account-dropdown .login-details{position: relative;margin-top: 10px;float: left;width: 100%;}
+ .top-cart .account-dropdown .login-details{position: relative;margin-top: 5px;float: left;width: 100%;}
  .top-cart .account-dropdown .login-details ul{margin: 0px;padding: 0px;}
- .top-cart .account-dropdown .login-details ul li{display: block;font-size: 17px;font-weight: 500;text-align: left;color: #000000;line-height: 26px;margin-bottom:20px;}
+ .top-cart .account-dropdown .login-details ul li{display: block;font-size: 17px;font-weight: 500;text-align: left;color:var(--text);line-height: 26px;margin-bottom:20px;}
  .top-cart .account-dropdown .login-details ul li:last-child{margin-bottom: 0px;}
- .top-cart .account-dropdown .login-details ul li a{color: #181A20;font-size: 17px;font-weight: 400;}
- .top-cart .account-dropdown .login-details ul li a:hover{color: #05243E;}
+ .top-cart .account-dropdown .login-details ul li a{color:var(--text);font-size: 16px;font-weight: 400;}
+ /* .top-cart .account-dropdown .login-details ul li a:hover{color:#ffffff;} */
 /* .header .register .top-cart .account-dropdown .login-details ul li:hover{padding-left: 3px;} */
  .top-cart .account-dropdown .login-details ul li span {color: #00A991;margin-left: 10px;}
  .top-cart .account-dropdown .login-details ul li span a{color: #00A991;}
- .top-cart .account-dropdown .login-details ul li span a:hover{color: #000000;}
+ /* .top-cart .account-dropdown .login-details ul li span a:hover{color:#ffffff} */
  .top-cart .account-dropdown .login-details ul hr{margin-top: 10px;margin-bottom: 10px;}
- .top-cart .account-dropdown .login-details ul li i{font-size: 20px;font-weight: normal;color: #181A20;margin-left: 10px;}
- .top-cart .account-dropdown .avtar-section{position: relative;width: 100%;align-items: center;float: left;border-bottom: 1px solid #BBBCCB;;padding-bottom: 15px;margin-bottom: 15px;}
+ .top-cart .account-dropdown .login-details ul li i{font-size: 20px;font-weight: normal;color:var(--text);margin-left: 10px;}
+ .top-cart .account-dropdown .avtar-section{position: relative;width: 100%;align-items: center;float: left;border-bottom: 1px solid #BBBCCB;;padding-bottom:5px;margin-bottom: 5px;}
 .top-cart .account-dropdown .avtar-section .circle{box-shadow: 0px 34.7482px 44.16px rgba(1, 1, 1, 0.07), 0px 16.56px 11.04px rgba(1, 1, 1, 0.06), 0px 5.52px 5.52px rgba(1, 1, 1, 0.05), 0px 5.52px 4.416px rgba(1, 1, 1, 0.04), 0px 2.208px 2.76px rgba(1, 1, 1, 0.03), 0px 0.992806px 1.104px rgba(1, 1, 1, 0.02);padding: 5px;border-radius: 50px;margin-right: 15px;width: 65px;height:65px;background: #2C6FE1;float: right;}
  .top-cart .account-dropdown .avtar-section .circle img{width: 100%;}
- .top-cart .account-dropdown .avtar-section p{font-size: 18px;font-weight:400;text-align: left;color: #000000;line-height: 25px;float: left;margin-top: 10px;}
- .top-cart .account-dropdown .avtar-section p span{font-size:18px;font-weight: 600;text-align: left;line-height: 35px;color: #000000;text-transform: capitalize;}
+ .top-cart .account-dropdown .avtar-section p{font-size: 18px;font-weight:400;text-align: left;color:var(--text);line-height: 25px;float: left;}
+ .top-cart .account-dropdown .avtar-section p span{font-size:18px;font-weight: 500;text-align: left;line-height: 35px;color:var(--text);text-transform: capitalize;}
 
 .top-cart .account-dropdown .logout{text-align: left;width: 100%;margin-top: 10px;border-top: 1px solid #BBBCCB;;padding-top: 10px;}
 
