--- a/src/component/Trade.css
+++ b/src/component/Trade.css
@@ -422,7 +422,7 @@
 
 .buy-btn {
   width: 100%;
-  /* margin-bottom: 15px; */
+  margin-bottom: 15px;
 }
 .buy-btn .buy {
   width: 100%;
@@ -573,7 +573,8 @@
   /* padding: 10px; */
   /* border-bottom: 1px solid var(--text); */
   border-bottom: 1px solid #000000;
-
+float: left;
+width: 100%;
   margin-bottom: 10px;
 }
 .trade-tab .limit-tab {
