--- a/public/css/style.css
+++ b/public/css/style.css
@@ -405,11 +405,11 @@ input[data-test="search-input"] {
 }
 .forgot .checkout-form-centre p {
   margin-bottom: 15px;
-  font-size: 17px;
+  font-size: 15px;
   font-weight: normal;
   text-align: center;
   text-transform: capitalize;
-  line-height: 27px;
+  line-height: 25px;
   color: var(--text);
 }
 .forgot .checkout-form-centre .checkout-login-step {
@@ -3683,3 +3683,85 @@ input[type="radio"] {
   color: var(--text);
   outline: none;
 }
+
+/* react-boostrap */
+@import "~bootstrap/dist/css/bootstrap.css";
+
+.navbar-brand {
+    color: #000000;
+    margin-right: 35px;
+}
+.navbar-brand img{width: 200px;}
+  .navbar {
+    transition: all .5s ease-in-out;
+    background-color: #ffffff;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    box-shadow: 1px 2px 15px rgb(100 100 100 / 30%);
+    /* filter: drop-shadow(-4px 5px 6px rgba(46, 47, 51, 0.04)) drop-shadow(8px 3px 6px rgba(30, 58, 94, 0.04)); */
+    z-index: 1;
+}
+.nav-link {
+    font-size: 17px;
+    color: #000000;
+    font-weight: 500;
+    letter-spacing: 0.030em;
+    transition: all 0.1s ease-in-out;
+    position: relative;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.register{float: right;position: relative;white-space: nowrap;}
+.register .top-cart{ position:relative;}
+.register .top-cart .book-now:hover{border: 1px solid#335D7E;background: #335D7E;transition: all .7s linear;}
+.register .top-cart .book-now{background: #75D9BD;border-radius: 50px;border: 1px solid#75D9BD;text-align: center;color: #ffffff;font-size: 18px;font-weight: 500;padding: 10px 32px;outline: none;}
+.register .top-cart .circle{box-shadow: 0px 16.56px 11.04px rgba(1, 1, 1, 0.06), 0px 5.52px 5.52px rgba(1, 1, 1, 0.05), 0px 5.52px 4.416px rgba(1, 1, 1, 0.04), 0px 2.208px 2.76px rgba(1, 1, 1, 0.03), 0px 0.992806px 1.104px rgba(1, 1, 1, 0.02);padding: 5px;border-radius: 50px;background: #75D9BD;}
+.register .top-cart .circle img{width: 40px;height:40px;border-radius: 50px;}
+
+.register .top-cart a{ color:#000000; }
+.register .top-cart i{font-size: 20px;font-weight: 600;color: #ffffff;}
+.register .top-cart .badge { display: inline-block; min-width: 15px; padding: 3px 6px; font-size: 13px; font-weight: 700; line-height: 1; color: #86C442; text-align: center;white-space: nowrap; vertical-align: middle; border: 2px solid #86C442; border-radius: 50px; margin-top: -4px;  margin-left:4px;}
+.register .top-cart img{width: 22px;}
+.register .top-cart .lu{width: 30px;margin-right: 15px;}
+.register .top-cart ::placeholder {color: #ffffff;opacity: 1;}
+
+.register ul{margin: 0px;padding: 0px;}
+.register ul li{display:inline-block;margin-right: 15px;}
+.register ul li:last-child{margin-right: 0px;}
+.register ul li .login{background: #e31e25;box-shadow: 0px 16.56px 11.04px rgba(1, 1, 1, 0.06), 0px 5.52px 5.52px rgba(1, 1, 1, 0.05), 0px 5.52px 4.416px rgba(1, 1, 1, 0.04), 0px 2.208px 2.76px rgba(1, 1, 1, 0.03), 0px 0.992806px 1.104px rgba(1, 1, 1, 0.02);font-size: 15px;padding: 11px 30px;font-weight: 600;text-align: center;text-transform: capitalize;color: #ffffff;outline: 5px solid #106939;border: 2px solid #ffffff;}
+.register ul li .login i{font-size: 20px;font-weight: normal;margin-right: 10px;}
+.register ul li .form-control{border: none;font-size: 14px;font-weight: 600;color: #5EB6FE;}
+.register ul li a.crl{color: #ffffff;display: block;font-size: 20px;border-radius: 50px;height: 40px;line-height: 40px;text-align: center;text-decoration: none;transition: all 0.3s ease 0s;width: 40px;
+	box-shadow: 0px 12px 12px rgba(50, 50, 71, 0.08), 0px 16px 24px rgba(50, 50, 71, 0.08);background: #0E3F68;}
+
+.register .top-cart .search{position: relative;box-shadow: 0px 34.7482px 44.16px rgba(1, 1, 1, 0.07), 0px 16.56px 11.04px rgba(1, 1, 1, 0.06), 0px 5.52px 5.52px rgba(1, 1, 1, 0.05), 0px 5.52px 4.416px rgba(1, 1, 1, 0.04), 0px 2.208px 2.76px rgba(1, 1, 1, 0.03), 0px 0.992806px 1.104px rgba(1, 1, 1, 0.02);min-width:630px;}
+.register .top-cart .search .form-control{border:none;filter: drop-shadow(0px 16px 16px rgba(50, 50, 71, 0.08)) drop-shadow(0px 24px 32px rgba(50, 50, 71, 0.08));border-right: none;
+background: #454545;height: 50px;font-size: 15px;color: #ffffff;border-top-left-radius: 30px;border-bottom-left-radius: 30px;padding: 19px 35px;font-weight: 300;outline: none;box-shadow: none;}
+.register .top-cart .search .input-group-text {background: #86C442;color: #ffffff;outline: none;border-radius: 30px;margin-left: -25px;border:none;font-size: 16px;font-weight: normal;padding: 10px 30px;z-index: 1;}
+.register .top-cart .search .input-group-text i{font-size: 15px;font-weight: 500;color: #ffffff;margin-right: 10px;}
+
+.top-cart .account-dropdown{position: absolute;width:149px;background: #fff;right: 0px;top: 120%;margin-top:10px;text-align: left;padding: 10px;border-radius: 6px;box-shadow: 0px 34.7482px 44.16px rgba(1, 1, 1, 0.07), 0px 16.56px 11.04px rgba(1, 1, 1, 0.06), 0px 5.52px 5.52px rgba(1, 1, 1, 0.05), 0px 5.52px 4.416px rgba(1, 1, 1, 0.04), 0px 2.208px 2.76px rgba(1, 1, 1, 0.03), 0px 0.992806px 1.104px rgba(1, 1, 1, 0.02);opacity: 0;;visibility: hidden;-webkit-transition: all 0.5s ease-in-out;transition: all 0.5s ease-in-out;z-index: 99999;}
+.top-cart:hover .account-dropdown{top: 86%;opacity: 1;visibility: visible;}
+.top-cart:hover .account-dropdown .sr-btn-wrap{text-align: left;margin-top:9px;}
+.top-cart .account-dropdown .sr-btn-wrap .sr-btn {text-align:center;padding:13px 20px;color: var(--white);font-weight: 500;font-size: 18px;display: inline-block;text-align: center; position: relative; overflow: hidden;z-index: 1;text-transform: capitalize;transition: box-shadow 0.5s;border-top-right-radius: 30px;border-bottom-left-radius: 30px;border-bottom-right-radius: 30px;min-width: 300px;background: radial-gradient(52.61% 83.94% at 22.22% 29.42%, #3C3939 1.04%, #000000 100%);}
+.top-cart .account-dropdown .sr-btn-wrap .sr-btn:hover{background: radial-gradient(77.25% 77.25% at 24.17% 22.75%, rgba(246, 246, 246, 0.75) 0%, rgba(185, 185, 185, 0.75) 100%);color: #000;}
+.top-cart .account-dropdown .login-details{position: relative;float: left;width: 100%;}
+.top-cart .account-dropdown .login-details ul{margin: 0px;padding: 0px;}
+.top-cart .account-dropdown .login-details ul li{display: block;font-size: 17px;font-weight: 500;text-align: left;color: #000000;line-height: 26px;margin-bottom:15px;}
+.top-cart .account-dropdown .login-details ul li:last-child{margin-bottom: 0px;}
+.top-cart .account-dropdown .login-details ul li a{color: #1E2223;font-size: 16px;font-weight: 500;}
+.top-cart .account-dropdown .login-details ul li a:hover{color: #05243E;}
+/* .header .register .top-cart .account-dropdown .login-details ul li:hover{padding-left: 3px;} */
+.top-cart .account-dropdown .login-details ul li span {color: #00A991;margin-left: 10px;}
+.top-cart .account-dropdown .login-details ul li span a{color: #00A991;}
+.top-cart .account-dropdown .login-details ul li span a:hover{color: #000000;}
+/* .top-cart .account-dropdown .login-details ul hr{margin-top: 10px;margin-bottom: 10px;} */
+.top-cart .account-dropdown .login-details ul li i{font-size: 20px;font-weight: normal;color: #000000;margin-left: 10px;}
+.top-cart .account-dropdown .avtar-section{position: relative;width: 100%;align-items: center;float: left;border-bottom: 1px solid #E6F3FF;;padding-bottom: 15px;margin-bottom: 15px;}
+.top-cart .account-dropdown .avtar-section .circle{box-shadow: 0px 16.56px 11.04px rgba(1, 1, 1, 0.06), 0px 5.52px 5.52px rgba(1, 1, 1, 0.05), 0px 5.52px 4.416px rgba(1, 1, 1, 0.04), 0px 2.208px 2.76px rgba(1, 1, 1, 0.03), 0px 0.992806px 1.104px rgba(1, 1, 1, 0.02);padding: 5px;border-radius: 50px;margin-right: 15px;background: #75D9BD;float: right;}
+.top-cart .account-dropdown .avtar-section .circle img{width: 65px;height:65px;border-radius: 50px;}
+.top-cart .account-dropdown .avtar-section p{font-size: 18px;font-weight:400;text-align: left;color: #000000;line-height: 25px;float: left;margin-top: 10px;}
+.top-cart .account-dropdown .avtar-section p span{font-size:18px;font-weight: 600;text-align: left;line-height: 35px;color: #000000;text-transform: capitalize;}
+
+.top-cart .account-dropdown .logout{text-align: left;width: 100%;}
