--- a/src/component/Trade.css
+++ b/src/component/Trade.css
@@ -148,7 +148,7 @@
 .coin-left-section {
   width: 100%;
   position: relative;
-
+min-height: 500px;
   float: left;
   background-color: var(--bg);
   border: 1px solid var(--border);
